<resources>
    <string name="app_name">BAMX GDL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_noticias">News</string>
    <string name="donaciones_BotoMonetarias">Monetary</string>
    <string name="donaciones_BotonEspecie">In-kind</string>

    <string name="monetarias_Text1">Monetary Donations</string>
    <string name="monetarias_Text2">Please transfer your donation to Banco Diocesano de Alimentos Guadalajara A.C.                                  Bank : BBVA Account number: 480300543 Key: 012320004803005439 Swift Code : BCMRMXMMPYM</string>
    <string name="monetarias_Text3">Amount to donate (USA)</string>
    <string name="monetarias_Text4">Make your donation anonymously</string>
    <string name="monetarias_Text5">Anonymous donation</string>
    <string name="monetarias_Text6">Name</string>
    <string name="monetarias_Text7">Last Name</string>
    <string name="monetarias_Text8">Email</string>
    <string name="monetarias_Text9">Phone Number</string>
    <string name="monetarias_Text10">Address</string>
    <string name="monetarias_B1">DONATE ONLINEA</string>
    <string name="monetarias_B2">DONATE OFFLINE</string>
    <string name="monetarias_B3">DONATE</string>
    <string name="monetarias_Text11">Country</string>

    <string name="especie_text1">In-kind Donations</string>
    <string name="especie_text2">Name</string>
    <string name="especie_text3">¿What product do you want to donate?</string>
    <string name="especie_text4">¿Are you a producer?</string>
    <string name="especie_text5">Your email</string>
    <string name="especie_text6">Your phone number</string>
    <string name="especie_text7">Your message</string>
    <string name="especie_Boton1">SEND</string>

    <string name="voluntario_text1">¿Are you interested?</string>
    <string name="voluntario_text2">Name</string>
    <string name="voluntario_text3">Company</string>
    <string name="voluntario_text4">Email</string>
    <string name="voluntario_text5">Phone number</string>
    <string name="voluntario_text6">Your message</string>
    <string name="voluntario_boton1">SEND</string>

    <string name="voluntario2_text1">Corporative volunteering</string>
    <string name="voluntario2_text2">This is the modality with which you and your company help carry out volunteer activities together in the communities we serve and in our winery.</string>
    <string name="voluntario2_boton1">I´m interested</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="tarjeta_text1">CARD</string>
    <string name="tarjeta_text2">Name</string>
    <string name="tarjeta_text3">Card number</string>
    <string name="tarjeta_text4">Month</string>
    <string name="tarjeta_text5">Year</string>
    <string name="tarjeta_text6">CVV</string>
    <string name="tarjeta_boton1">SEND DONATION</string>

    <string name="dinero_text1">Monetary donations</string>
    <string name="dinero_text2">In-kind donation</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="acercade_text0">About us</string>
    <string name="acercade_text1">¿Who are we?</string>
    <string name="acercade_text2">We are a civil organization with a common vision: to reduce food poverty in Jalisco. We legally conformed in April 1992.</string>
    <string name="acercade_text3">We were just a few dreamers with great purposes: Ricardo Bon Echavarría, Luis Adolfo Orozco Fernández and Everardo Cornejo Padilla, entrepreneurs from the Mercado de Abastos de Guadalajara, realized how unbalanced things were: a large amount of food was wasted every day, while many people lived hungry, with nothing to put in your mouth.</string>
    <string name="acercade_text4">They joined Cáritas, to collect excess food and distribute it among families in vulnerable situations. Since then, this group of dreamers has grown in number and will. So much so that, after the formation of the Food Bank of Guadalajara, our model began to be replicated, to create a network of 55 banks in the country: the Food Bank of Mexico BAMX.</string>
    <string name="acercade_text5">Mission</string>
    <string name="acercade_text6">Generate access to decent food for people in vulnerable situations in our community.</string>
    <string name="acercade_text7">Vision</string>
    <string name="acercade_text8">Reduce food poverty in Jalisco.</string>
    <string name="acercade_text9">Informative data</string>
    <string name="acercade_text10">families served each month</string>
    <string name="acercade_text11">People served each month</string>
    <string name="acercade_text12">Hoarded food</string>
    <string name="acercade_text13">Institutions served</string>

    <string name="galeria_text1">Gallery</string>
    <string name="galeria_text2">Food Collection</string>
    <string name="galeria_text3">food rescue</string>


</resources>