<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202025"
    tools:context=".FormularioVolFragment">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="344dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/voluntario_text1"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/botonbordes"
                android:text="\n        Pichón 1147, Colonia \n        Morelos, 44910 \n        Guadalajara, Jalisco. \n\n        33 3810 6595 \n\n        relacionesinst@bdalimentos\n         .org\n"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/especie_text2"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/nameVol"
                app:layout_constraintStart_toStartOf="@+id/nameVol" />

            <EditText
                android:id="@+id/nameVol"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_marginTop="50dp"
                android:background="#424242"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/empresaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voluntario_text3"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/empresaVoluntario"
                app:layout_constraintStart_toStartOf="@+id/empresaVoluntario" />

            <EditText
                android:id="@+id/empresaVoluntario"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_marginTop="32dp"
                android:background="#424242"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameVol"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voluntario_text4"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/correoVoluntario"
                app:layout_constraintStart_toStartOf="@+id/correoVoluntario" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voluntario_text5"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/telefonoVoluntario"
                app:layout_constraintStart_toStartOf="@+id/telefonoVoluntario" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voluntario_text6"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/mensajeVoluntario"
                app:layout_constraintStart_toStartOf="@+id/mensajeVoluntario" />

            <EditText
                android:id="@+id/correoVoluntario"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_marginTop="32dp"
                android:background="#424242"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/empresaVoluntario"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/telefonoVoluntario"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_marginTop="32dp"
                android:background="#424242"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/correoVoluntario"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/mensajeVoluntario"
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                android:background="#424242"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/telefonoVoluntario"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/enviarVoluntario"
                android:layout_width="226dp"
                android:layout_height="54dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/botonbordes"
                android:text="@string/voluntario2_boton1"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mensajeVoluntario" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="168dp"
                android:src="@drawable/correo_bamx"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                app:layout_constraintTop_toTopOf="@+id/textView20" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:src="@drawable/telefono_bamx"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                app:layout_constraintTop_toTopOf="@+id/textView20" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="27dp"
                android:src="@drawable/ubi_bamx"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                app:layout_constraintTop_toTopOf="@+id/textView20" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>